--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,12 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>VennDiagramGenerator</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">  
+  <title>Venn Diagram Generator</title>
   <base href="/">
-
-  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root>Loading...</app-root>
+  <app-root>Loading Venn Diagram Generator App...</app-root>
 </body>
 </html>
