changed app selector to venn-diagram-app for clarity

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root>Loading Venn Diagram Generator App...</app-root>
+  <venn-diagram-app>Loading Venn Diagram Generator App...</venn-diagram-app>
 </body>
 </html>
