--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <venn-diagram-app>Loading Venn Diagram Generator App...</venn-diagram-app>
+  <venn-diagram-app id="app">Loading Venn Diagram Generator App...</venn-diagram-app>
 </body>
 </html>
