alpha v. of new repsonsive 2 cols layout based on this...
https://codepen.io/mor10/pen/QvmLpd

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <venn-diagram-app id="app" class="app">Loading Venn Diagram Generator...</venn-diagram-app>
+  <venn-diagram-app id="app" class="app-view">Loading...</venn-diagram-app>
 </body>
 </html>
